<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    tools:context=".Activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nah, Bikin Akun lah!"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"/>

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"/>

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Foto Profil"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"/>
        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:hint="@string/name"
            android:paddingStart="@dimen/_12sdp"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_12ssp"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:hint="@string/email"
            android:paddingStart="@dimen/_12sdp"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_12ssp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:hint="@string/password"
            android:paddingStart="@dimen/_12sdp"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_12ssp"/>

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:hint="@string/confirmPassword"
            android:paddingStart="@dimen/_12sdp"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_12ssp"/>
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/register"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                android:textColor="@color/white"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="Punya akun?"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/btntxt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="Login lah"
                android:textColor="@color/secondary"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>