<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    tools:context=".Activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="Login Dulu!"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:hint="@string/email"
            android:paddingStart="@dimen/_12sdp"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_12ssp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:hint="@string/password"
            android:paddingStart="@dimen/_12sdp"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_12ssp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/login"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                android:textColor="@color/white"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="Ga punya akun?"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/btntxt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="Minimal buat sini"
                android:textColor="@color/secondary"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>